<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.page.operation.GiveActivity">

    <EditText
            android:id="@+id/firstName"
            android:layout_width="220dp"
            android:layout_height="50dp"
            android:layout_above="@id/lastName"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="12dp"
            android:background="@drawable/edit_text_bg"
            android:gravity="center"
            android:hint="@string/first_name"
            android:inputType="text"
            android:textColor="#000000"
            android:maxLength="11"
            android:textColorHint="#000000"
            android:textSize="20sp"
            android:textStyle="bold"/>

    <EditText
            android:id="@+id/lastName"
            android:layout_width="220dp"
            android:layout_height="50dp"
            android:layout_above="@id/country"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="12dp"
            android:background="@drawable/edit_text_bg"
            android:gravity="center"
            android:hint="@string/last_name"
            android:inputType="text"
            android:textColor="#000000"
            android:maxLength="11"
            android:textColorHint="#000000"
            android:textSize="20sp"
            android:textStyle="bold"/>


    <EditText
            android:id="@+id/country"
            android:layout_width="220dp"
            android:layout_height="50dp"
            android:layout_above="@id/passportId"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="12dp"
            android:background="@drawable/edit_text_bg"
            android:gravity="center"
            android:hint="@string/countryHint"
            android:inputType="text"
            android:textColor="#000000"
            android:maxLength="11"
            android:textColorHint="#000000"
            android:textSize="20sp"
            android:textStyle="bold"/>

    <EditText
            android:id="@+id/passportId"
            android:layout_width="220dp"
            android:layout_height="50dp"
            android:layout_above="@id/phone"
            android:layout_centerHorizontal="true"
            android:background="@drawable/edit_text_bg"
            android:gravity="center"
            android:hint="@string/passportIdHint"
            android:inputType="text"
            android:layout_marginBottom="12dp"
            android:textColor="#000000"
            android:textColorHint="#000000"
            android:textSize="20sp"
            android:textStyle="bold"/>


    <EditText
            android:id="@+id/phone"
            android:layout_width="220dp"
            android:layout_height="50dp"
            android:layout_above="@id/search"
            android:layout_centerHorizontal="true"
            android:background="@drawable/edit_text_bg"
            android:gravity="center"
            android:layout_marginBottom="60dp"
            android:hint="@string/phoneNumberHint"
            android:inputType="phone"
            android:textColor="#000000"
            android:maxLength="11"
            android:textColorHint="#000000"
            android:textSize="20sp"
            android:textStyle="bold"/>

    <ir.nilva.abotorab.view.widget.UnoButton
            android:id="@+id/search"
            android:layout_width="220dp"
            android:layout_height="50dp"
            android:text="@string/search"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="100dp"/>

    <com.github.ybq.android.spinkit.SpinKitView
            android:id="@+id/spinKit"
            style="@style/SpinKitView.CubeGrid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="100dp"
            android:visibility="invisible"
            app:SpinKit_Color="@color/gray"/>

</RelativeLayout>
