<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@mipmap/background"
        tools:context=".view.page.operation.TakeActivity">

    <EditText
            android:id="@+id/firstName"
            android:layout_width="220dp"
            android:layout_height="50dp"
            android:layout_above="@id/lastName"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="12dp"
            android:background="@drawable/edit_text_bg"
            android:gravity="center"
            android:hint="@string/first_name"
            android:inputType="text"
            android:textColor="#000000"
            android:textColorHint="#000000"
            android:textSize="20sp"
            android:textStyle="bold" />

    <EditText
            android:id="@+id/lastName"
            android:layout_width="220dp"
            android:layout_height="50dp"
            android:layout_above="@id/country"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="12dp"
            android:background="@drawable/edit_text_bg"
            android:gravity="center"
            android:hint="@string/last_name"
            android:inputType="text"
            android:textColor="#000000"
            android:textColorHint="#000000"
            android:textSize="20sp"
            android:textStyle="bold" />


    <EditText
            android:id="@+id/country"
            android:layout_width="220dp"
            android:layout_height="50dp"
            android:layout_above="@id/passportId"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="12dp"
            android:background="@drawable/edit_text_bg"
            android:gravity="center"
            android:hint="@string/countryHint"
            android:inputType="text"
            android:textColor="#000000"
            android:textColorHint="#000000"
            android:textSize="20sp"
            android:textStyle="bold" />

    <EditText
            android:id="@+id/passportId"
            android:layout_width="220dp"
            android:layout_height="50dp"
            android:layout_above="@id/phone"
            android:layout_centerHorizontal="true"
            android:background="@drawable/edit_text_bg"
            android:gravity="center"
            android:hint="@string/passportIdHint"
            android:inputType="text"
            android:layout_marginBottom="12dp"
            android:textColor="#000000"
            android:textColorHint="#000000"
            android:textSize="20sp"
            android:textStyle="bold" />

    <EditText
            android:id="@+id/phone"
            android:layout_width="220dp"
            android:layout_height="50dp"
            android:layout_above="@id/stepperLayout"
            android:layout_centerHorizontal="true"
            android:background="@drawable/edit_text_bg"
            android:gravity="center"
            android:hint="@string/phoneNumberHint"
            android:inputType="phone"
            android:layout_marginBottom="60dp"
            android:textColor="#000000"
            android:textColorHint="#000000"
            android:textSize="20sp"
            android:textStyle="bold" />

    <ir.nilva.abotorab.view.widget.UnoButton
            android:id="@+id/submit"
            android:layout_width="220dp"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="100dp"
            android:text="@string/take" />

    <com.github.ybq.android.spinkit.SpinKitView
            android:id="@+id/spinKit"
            style="@style/SpinKitView.CubeGrid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="100dp"
            android:visibility="invisible"
            app:SpinKit_Color="@color/gray" />

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/stepperLayout"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="12dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

        <TextView
                android:id="@+id/bagLabel"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginLeft="12dp"
                android:gravity="center"
                android:text="@string/bag"
                android:textColor="@color/white"
                android:textSize="20sp" />

        <TextView
                android:id="@+id/suitcaseLabel"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginLeft="12dp"
                android:gravity="center"
                android:text="@string/suitcase"
                android:textColor="@color/white"
                android:textSize="20sp" />

        <TextView
                android:id="@+id/pramLabel"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginLeft="12dp"
                android:gravity="center"
                android:text="@string/pram"
                android:textColor="@color/white"
                android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
            android:id="@+id/stepperLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/submit"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="24dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

        <nl.dionsegijn.steppertouch.StepperTouch
                android:id="@+id/bagCount"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:layout_marginStart="12dp"
                android:layout_marginLeft="12dp"
                app:stepperBackgroundColor="@color/colorAccent" />

        <nl.dionsegijn.steppertouch.StepperTouch
                android:id="@+id/suitcaseCount"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:layout_marginStart="12dp"
                android:layout_marginLeft="12dp"
                app:stepperBackgroundColor="@color/colorAccent" />

        <nl.dionsegijn.steppertouch.StepperTouch
                android:id="@+id/pramCount"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:layout_marginStart="12dp"
                android:layout_marginLeft="12dp"
                app:stepperBackgroundColor="@color/colorAccent" />

    </LinearLayout>

    <com.aurelhubert.ahbottomnavigation.AHBottomNavigation
            android:id="@+id/bottom_navigation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true" />

</RelativeLayout>
