<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@mipmap/background"
        tools:context=".view.page.operation.GiveSearchActivity">

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <EditText
                android:id="@+id/firstName"
                android:layout_width="220dp"
                android:layout_height="50dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="12dp"
                android:background="@drawable/edit_text_bg"
                android:gravity="center"
                android:hint="@string/first_name"
                android:inputType="text"
                android:textColor="#000000"
                android:textColorHint="#000000"
                android:textSize="20sp"
                android:textStyle="bold" />

        <EditText
                android:id="@+id/lastName"
                android:layout_width="220dp"
                android:layout_height="50dp"
                android:layout_below="@id/firstName"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="12dp"
                android:background="@drawable/edit_text_bg"
                android:gravity="center"
                android:hint="@string/last_name"
                android:inputType="text"
                android:textColor="#000000"
                android:textColorHint="#000000"
                android:textSize="20sp"
                android:textStyle="bold" />


        <AutoCompleteTextView
                android:id="@+id/country"
                android:layout_width="220dp"
                android:layout_height="50dp"
                android:layout_below="@id/lastName"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="12dp"
                android:background="@drawable/edit_text_bg"
                android:gravity="center"
                android:hint="@string/countryHint"
                android:inputType="text"
                android:textColor="#000000"
                android:textColorHint="#000000"
                android:textSize="20sp"
                android:textStyle="bold" />

        <EditText
                android:id="@+id/passportId"
                android:layout_width="220dp"
                android:layout_height="50dp"
                android:layout_below="@id/country"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="12dp"
                android:background="@drawable/edit_text_bg"
                android:gravity="center"
                android:hint="@string/passportIdHint"
                android:inputType="text"
                android:textColor="#000000"
                android:textColorHint="#000000"
                android:textSize="20sp"
                android:textStyle="bold" />

        <EditText
                android:id="@+id/phone"
                android:layout_width="220dp"
                android:layout_height="50dp"
                android:layout_below="@id/passportId"
                android:layout_centerHorizontal="true"
                android:background="@drawable/edit_text_bg"
                android:gravity="center"
                android:hint="@string/phoneNumberHint"
                android:inputType="phone"
                android:textColor="#000000"
                android:textColorHint="#000000"
                android:textSize="20sp"
                android:textStyle="bold" />



        <ir.nilva.abotorab.view.widget.UnoButton
                android:id="@+id/search"
                android:layout_width="220dp"
                android:layout_height="50dp"
                android:layout_marginTop="12dp"
                android:layout_below="@id/phone"
                android:layout_centerHorizontal="true"
                android:text="@string/search" />

        <com.github.ybq.android.spinkit.SpinKitView
                android:id="@+id/spinKit"
                style="@style/SpinKitView.CubeGrid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/phone"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="12dp"
                android:visibility="invisible"
                app:SpinKit_Color="@color/gray" />

    </RelativeLayout>

    <com.google.android.material.bottomappbar.BottomAppBar
            android:id="@+id/bottom_app_bar"
            style="@style/Widget.MaterialComponents.BottomAppBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            app:backgroundTint="@color/colorPrimary"
            app:fabAlignmentMode="center" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_camera"
            app:layout_anchor="@id/bottom_app_bar" />


</androidx.coordinatorlayout.widget.CoordinatorLayout>
