<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@mipmap/background"
        android:orientation="vertical"
        tools:context=".view.page.main.MainActivity">

    <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profileImage"
            android:layout_width="115dp"
            android:layout_height="115dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:src="@mipmap/avatar"
            app:civ_border_color="#FFFFFF"
            app:civ_border_width="1dp" />

    <LinearLayout
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_below="@id/profileImage"
            android:layout_height="wrap_content"
            android:background="@drawable/level_background"
            android:padding="4dp"
            android:layout_marginTop="4dp"
            android:layout_centerHorizontal="true">


        <TextView
                android:id="@+id/rish"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:padding="8dp"
                android:text="کاربر سیستم"
                android:textColor="@color/white"
                android:textStyle="bold" />

        <ImageView
                android:id="@+id/logout"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginStart="4dp"
                android:src="@mipmap/logout" />




    </LinearLayout>

    <RelativeLayout
            android:id="@+id/rate_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/title"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="12dp"
            android:layout_marginRight="40dp"
            android:background="@drawable/rate_background"
            android:paddingTop="8dp"
            android:paddingBottom="8dp">

        <LinearLayout
                android:id="@+id/rateLabelsLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:orientation="horizontal"
                android:weightSum="3">

            <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/register_count" />

            <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:maxLines="1"
                    android:text="@string/empty_cabinet" />

            <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/cabinet_count" />


        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/rateLabelsLayout"
                android:layout_marginTop="8dp"
                android:orientation="horizontal"
                android:weightSum="3">

            <TextView
                    android:id="@+id/registerCount"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="270" />

            <TextView
                    android:id="@+id/emptyCabinets"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="1040" />


            <TextView
                    android:id="@+id/cabinetCount"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="3500" />


        </LinearLayout>


    </RelativeLayout>

    <com.ramotion.circlemenu.CircleMenuView
            android:id="@+id/circularLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/rate_layout"
            android:layout_marginTop="8dp"
            app:button_colors="@array/colors"
            app:button_icons="@array/icons" />


</RelativeLayout>
